--- a/app/views/rails_admin/main/_tag_list.html.erb
+++ b/app/views/rails_admin/main/_tag_list.html.erb
@@ -1,5 +1,5 @@
-                <%= label_tag "#{field.abstract_model.to_param}_#{field.name}", field.label %>
-                <%= text_field field.abstract_model.to_param,
+                <%= label_tag "#{field.abstract_model.to_param.singularize}_#{field.name}", field.label %>
+                <%= text_field field.abstract_model.to_param.singularize,
                                field.name,
                                :size => 50,
                                :class => "#{field.css_class} #{field.has_errors? ? "errorField" : nil}",
