--- a/app/views/rails_admin/main/_tag_list_with_suggestions.html.haml
+++ b/app/views/rails_admin/main/_tag_list_with_suggestions.html.haml
@@ -7,7 +7,7 @@
   jQuery(function(){
     var input_id = '#{form.dom_id(field)}'
     $('.tag_suggestion[data-input-id=' + input_id + ']').click(function(event){
-      var tag_list, current_values, new_values, tag;
+      var tag_list, values, tag;
       tag_list = $(this).siblings('input#' + input_id);
       // Get the current values by splitting on a comma and stripping whitespace.
       values = jQuery.map(tag_list.val().split(','), function(val){ return jQuery.trim(val) });
