--- a/app/views/rails_admin/main/_tag_list_with_suggestions.html.haml
+++ b/app/views/rails_admin/main/_tag_list_with_suggestions.html.haml
@@ -1,9 +1,7 @@
 = form.send field.view_helper, field.method_name, field.html_attributes
-- suggestions = tag_suggestions(field, :length => 5, :order => { :count => :desc })
 
-- if suggestions.any?
-  - suggestions.each do |tag|
-    = link_to %{<i class="icon-tag"></i> #{tag}}.html_safe, '#', :class => 'tag_suggestion', :style => 'margin:0 5px', :data => { :input_id => form.dom_id(field) }
+- tag_suggestions(field, :length => 5, :order => { :count => :desc }).each do |tag|
+  = link_to %{<i class="icon-tag"></i> #{tag}}.html_safe, '#', :class => 'tag_suggestion', :style => 'margin:0 5px', :data => { :input_id => form.dom_id(field), :tag_value => tag }
 
 :javascript
   jQuery(function(){
@@ -15,7 +13,7 @@
       values = jQuery.map(tag_list.val().split(','), function(val){ return jQuery.trim(val) });
       // Remove empty strings from values
       values = jQuery.grep(values, function(n) { return n.length > 0 });
-      tag = $(this).text();
+      tag = $(this).data('tag-value');
       if (jQuery.inArray(tag, values) == -1) {
         values.push(tag);
       } else {
