Missing field variable

--- a/app/views/rails_admin/main/_tag_list_with_autocomplete.html.haml
+++ b/app/views/rails_admin/main/_tag_list_with_autocomplete.html.haml
@@ -2,7 +2,7 @@
 
 :javascript
   $(function() {
-      var availableTags = #{ratl_all_tags};
+      var availableTags = #{ratl_all_tags(field)};
 
       function split( val ) {
         return val.split( /,\s*/ );
