--- a/app/views/rails_admin/main/_tag_list_with_suggestions.html.haml
+++ b/app/views/rails_admin/main/_tag_list_with_suggestions.html.haml
@@ -1,7 +1,7 @@
 = form.send field.view_helper, field.method_name, field.html_attributes.reverse_merge({ value: field.form_value, class: 'form-control', required: field.required})
 
 - tag_suggestions(field, :length => 5, :order => { :count => :desc }).each do |tag|
-  = link_to %{<i class="icon-tag"></i> #{tag}}.html_safe, '#', :class => 'tag_suggestion', :style => 'margin:0 5px', :data => { :input_id => form.dom_id(field), :tag_value => tag }
+  = link_to %{<i class="icon-tag"></i> #{tag}}.html_safe, '#', :class => 'tag_suggestion', :data => { :input_id => form.dom_id(field), :tag_value => tag }
 
 :javascript
   jQuery(function(){
@@ -31,11 +31,15 @@
     input
       display: inline-block
       margin-right: 10px
+
   .tag_suggestion
-    margin-right: 5px
+    margin: 0 5px
     border-bottom: 1px dotted #b94a48
     color: #777
+    text-decoration: none
     &:hover
       color: #aaa
       border-bottom: 1px dotted #953b39
+      text-decoration: none
+    &:focus
       text-decoration: none
