--- a/app/views/rails_admin/main/_tag_list_with_autocomplete.html.haml
+++ b/app/views/rails_admin/main/_tag_list_with_autocomplete.html.haml
@@ -1,4 +1,4 @@
-= form.send field.view_helper, field.method_name, field.html_attributes
+= form.send field.view_helper, field.method_name, field.html_attributes.reverse_merge({ value: field.form_value, class: 'form-control', required: field.required})
 
 :javascript
   $(function() {
