Refactor custom field views and add `ratl_max_suggestions` config option

--- a/app/views/rails_admin/main/_tag_list_with_autocomplete.html.haml
+++ b/app/views/rails_admin/main/_tag_list_with_autocomplete.html.haml
@@ -2,7 +2,7 @@
 
 :javascript
   $(function() {
-      var availableTags = #{ratl_all_tags(field)};
+      var availableTags = #{ratl_suggestions(field, order: :name)};
 
       function split( val ) {
         return val.split( /,\s*/ );
